# tango_icons_vendor

./: CHANGELOG.rst  CMakeLists.txt  package.xml
