<package format="2">
  <name>tango_icons_vendor</name>
  <version>1.0.0</version>
  <description>tango_icons_vendor provides the public domain Tango icons for Windows (<a href="http://tango.freedesktop.org/Tango_Icon_Library">Tango Icon Library</a>) from the <a href="http://tango.freedesktop.org/Tango_Desktop_Project">Tango Desktop Project</a></description>
  <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>

  <license>Public Domain</license>

  <url type="website">http://ros.org/wiki/qt_gui_icons</url>
  <url type="repository">https://github.com/ros-visualization/qt_gui_icons</url>
  <url type="bugtracker">https://github.com/ros-visualization/qt_gui_icons/issues</url>

  <author>Stephen Brawner</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
